[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pbx"
version = "0.0.3"
description = "PBX - Modular payload generation framework."
authors = [
    { name="diputs-sudo", email="diputs-sudo@proton.me" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["."]
include = ["pbx*"]

[project.scripts]
pbx = "pbx.cli.cli:main"